src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> assign_instr
Rule 5     instruction -> if_instr
Rule 6     instruction -> while_instr
Rule 7     instruction -> for_instr
Rule 8     instruction -> break_instr
Rule 9     instruction -> continue_instr
Rule 10    instruction -> return_instr
Rule 11    instruction -> print_instr
Rule 12    instruction -> expression
Rule 13    instruction -> { instructions }
Rule 14    assign_instr -> ID = expression ;
Rule 15    assign_instr -> ID PLUSASSIGN expression ;
Rule 16    assign_instr -> ID SUBASSIGN expression ;
Rule 17    assign_instr -> ID MULASSIGN expression ;
Rule 18    assign_instr -> ID DIVASSIGN expression ;
Rule 19    assign_instr -> ID = array ;
Rule 20    assign_instr -> ID [ indexes ] = expression ;
Rule 21    assign_instr -> ID [ indexes ] PLUSASSIGN expression ;
Rule 22    assign_instr -> ID [ indexes ] SUBASSIGN expression ;
Rule 23    assign_instr -> ID [ indexes ] MULASSIGN expression ;
Rule 24    assign_instr -> ID [ indexes ] DIVASSIGN expression ;
Rule 25    assign_instr -> ID = ( - expression ) ;
Rule 26    array -> [ subarrays ]
Rule 27    array -> [ indexes ]
Rule 28    subarrays -> subarrays , array
Rule 29    subarrays -> array
Rule 30    indexes -> indexes , index
Rule 31    indexes -> index
Rule 32    index -> INTNUM
Rule 33    index -> ID
Rule 34    if_instr -> IF ( expression ) instruction
Rule 35    if_instr -> IF ( expression ) instruction ELSE instruction
Rule 36    while_instr -> WHILE ( expression ) instruction
Rule 37    for_instr -> FOR range instruction
Rule 38    range -> ID = expression : expression
Rule 39    break_instr -> BREAK ;
Rule 40    continue_instr -> CONTINUE ;
Rule 41    return_instr -> RETURN ;
Rule 42    return_instr -> RETURN expression ;
Rule 43    print_instr -> PRINT printable ;
Rule 44    printable -> printable , expression
Rule 45    printable -> expression
Rule 46    expression -> expression LESSER_THAN expression
Rule 47    expression -> expression GREATER_THAN expression
Rule 48    expression -> expression LESSER_EQUAL expression
Rule 49    expression -> expression GREATER_EQUAL expression
Rule 50    expression -> expression NOT_EQUAL expression
Rule 51    expression -> expression EQUAL expression
Rule 52    expression -> expression + expression
Rule 53    expression -> expression - expression
Rule 54    expression -> expression * expression
Rule 55    expression -> expression / expression
Rule 56    expression -> expression DOTADD expression
Rule 57    expression -> expression DOTSUB expression
Rule 58    expression -> expression DOTMUL expression
Rule 59    expression -> expression DOTDIV expression
Rule 60    expression -> expression '
Rule 61    expression -> EYE ( expression )
Rule 62    expression -> ONES ( expression )
Rule 63    expression -> ZEROS ( expression )
Rule 64    expression -> ( expression )
Rule 65    expression -> INTNUM
Rule 66    expression -> FLOATNUM
Rule 67    expression -> STRING
Rule 68    expression -> ID

Terminals, with rules where they appear

'                    : 60
(                    : 25 34 35 36 61 62 63 64
)                    : 25 34 35 36 61 62 63 64
*                    : 54
+                    : 52
,                    : 28 30 44
-                    : 25 53
/                    : 55
:                    : 38
;                    : 14 15 16 17 18 19 20 21 22 23 24 25 39 40 41 42 43
=                    : 14 19 20 25 38
BREAK                : 39
CONTINUE             : 40
DIVASSIGN            : 18 24
DOTADD               : 56
DOTDIV               : 59
DOTMUL               : 58
DOTSUB               : 57
ELSE                 : 35
EQUAL                : 51
EYE                  : 61
FLOATNUM             : 66
FOR                  : 37
GREATER_EQUAL        : 49
GREATER_THAN         : 47
ID                   : 14 15 16 17 18 19 20 21 22 23 24 25 33 38 68
IF                   : 34 35
INTNUM               : 32 65
LESSER_EQUAL         : 48
LESSER_THAN          : 46
MULASSIGN            : 17 23
NOT_EQUAL            : 50
ONES                 : 62
PLUSASSIGN           : 15 21
PRINT                : 43
RETURN               : 41 42
STRING               : 67
SUBASSIGN            : 16 22
WHILE                : 36
ZEROS                : 63
[                    : 20 21 22 23 24 26 27
]                    : 20 21 22 23 24 26 27
error                : 
{                    : 13
}                    : 13

Nonterminals, with rules where they appear

array                : 19 28 29
assign_instr         : 4
break_instr          : 8
continue_instr       : 9
expression           : 12 14 15 16 17 18 20 21 22 23 24 25 34 35 36 38 38 42 44 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 62 63 64
for_instr            : 7
if_instr             : 5
index                : 30 31
indexes              : 20 21 22 23 24 27 30
instruction          : 2 3 34 35 35 36 37
instructions         : 1 2 13
print_instr          : 11
printable            : 43 44
program              : 0
range                : 37
return_instr         : 10
subarrays            : 26 28
while_instr          : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . assign_instr
    (5) instruction -> . if_instr
    (6) instruction -> . while_instr
    (7) instruction -> . for_instr
    (8) instruction -> . break_instr
    (9) instruction -> . continue_instr
    (10) instruction -> . return_instr
    (11) instruction -> . print_instr
    (12) instruction -> . expression
    (13) instruction -> . { instructions }
    (14) assign_instr -> . ID = expression ;
    (15) assign_instr -> . ID PLUSASSIGN expression ;
    (16) assign_instr -> . ID SUBASSIGN expression ;
    (17) assign_instr -> . ID MULASSIGN expression ;
    (18) assign_instr -> . ID DIVASSIGN expression ;
    (19) assign_instr -> . ID = array ;
    (20) assign_instr -> . ID [ indexes ] = expression ;
    (21) assign_instr -> . ID [ indexes ] PLUSASSIGN expression ;
    (22) assign_instr -> . ID [ indexes ] SUBASSIGN expression ;
    (23) assign_instr -> . ID [ indexes ] MULASSIGN expression ;
    (24) assign_instr -> . ID [ indexes ] DIVASSIGN expression ;
    (25) assign_instr -> . ID = ( - expression ) ;
    (34) if_instr -> . IF ( expression ) instruction
    (35) if_instr -> . IF ( expression ) instruction ELSE instruction
    (36) while_instr -> . WHILE ( expression ) instruction
    (37) for_instr -> . FOR range instruction
    (39) break_instr -> . BREAK ;
    (40) continue_instr -> . CONTINUE ;
    (41) return_instr -> . RETURN ;
    (42) return_instr -> . RETURN expression ;
    (43) print_instr -> . PRINT printable ;
    (46) expression -> . expression LESSER_THAN expression
    (47) expression -> . expression GREATER_THAN expression
    (48) expression -> . expression LESSER_EQUAL expression
    (49) expression -> . expression GREATER_EQUAL expression
    (50) expression -> . expression NOT_EQUAL expression
    (51) expression -> . expression EQUAL expression
    (52) expression -> . expression + expression
    (53) expression -> . expression - expression
    (54) expression -> . expression * expression
    (55) expression -> . expression / expression
    (56) expression -> . expression DOTADD expression
    (57) expression -> . expression DOTSUB expression
    (58) expression -> . expression DOTMUL expression
    (59) expression -> . expression DOTDIV expression
    (60) expression -> . expression '
    (61) expression -> . EYE ( expression )
    (62) expression -> . ONES ( expression )
    (63) expression -> . ZEROS ( expression )
    (64) expression -> . ( expression )
    (65) expression -> . INTNUM
    (66) expression -> . FLOATNUM
    (67) expression -> . STRING
    (68) expression -> . ID

    {               shift and go to state 13
    ID              shift and go to state 14
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    EYE             shift and go to state 23
    ONES            shift and go to state 24
    ZEROS           shift and go to state 25
    (               shift and go to state 15
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27
    STRING          shift and go to state 28

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    assign_instr                   shift and go to state 4
    if_instr                       shift and go to state 5
    while_instr                    shift and go to state 6
    for_instr                      shift and go to state 7
    break_instr                    shift and go to state 8
    continue_instr                 shift and go to state 9
    return_instr                   shift and go to state 10
    print_instr                    shift and go to state 11
    expression                     shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . assign_instr
    (5) instruction -> . if_instr
    (6) instruction -> . while_instr
    (7) instruction -> . for_instr
    (8) instruction -> . break_instr
    (9) instruction -> . continue_instr
    (10) instruction -> . return_instr
    (11) instruction -> . print_instr
    (12) instruction -> . expression
    (13) instruction -> . { instructions }
    (14) assign_instr -> . ID = expression ;
    (15) assign_instr -> . ID PLUSASSIGN expression ;
    (16) assign_instr -> . ID SUBASSIGN expression ;
    (17) assign_instr -> . ID MULASSIGN expression ;
    (18) assign_instr -> . ID DIVASSIGN expression ;
    (19) assign_instr -> . ID = array ;
    (20) assign_instr -> . ID [ indexes ] = expression ;
    (21) assign_instr -> . ID [ indexes ] PLUSASSIGN expression ;
    (22) assign_instr -> . ID [ indexes ] SUBASSIGN expression ;
    (23) assign_instr -> . ID [ indexes ] MULASSIGN expression ;
    (24) assign_instr -> . ID [ indexes ] DIVASSIGN expression ;
    (25) assign_instr -> . ID = ( - expression ) ;
    (34) if_instr -> . IF ( expression ) instruction
    (35) if_instr -> . IF ( expression ) instruction ELSE instruction
    (36) while_instr -> . WHILE ( expression ) instruction
    (37) for_instr -> . FOR range instruction
    (39) break_instr -> . BREAK ;
    (40) continue_instr -> . CONTINUE ;
    (41) return_instr -> . RETURN ;
    (42) return_instr -> . RETURN expression ;
    (43) print_instr -> . PRINT printable ;
    (46) expression -> . expression LESSER_THAN expression
    (47) expression -> . expression GREATER_THAN expression
    (48) expression -> . expression LESSER_EQUAL expression
    (49) expression -> . expression GREATER_EQUAL expression
    (50) expression -> . expression NOT_EQUAL expression
    (51) expression -> . expression EQUAL expression
    (52) expression -> . expression + expression
    (53) expression -> . expression - expression
    (54) expression -> . expression * expression
    (55) expression -> . expression / expression
    (56) expression -> . expression DOTADD expression
    (57) expression -> . expression DOTSUB expression
    (58) expression -> . expression DOTMUL expression
    (59) expression -> . expression DOTDIV expression
    (60) expression -> . expression '
    (61) expression -> . EYE ( expression )
    (62) expression -> . ONES ( expression )
    (63) expression -> . ZEROS ( expression )
    (64) expression -> . ( expression )
    (65) expression -> . INTNUM
    (66) expression -> . FLOATNUM
    (67) expression -> . STRING
    (68) expression -> . ID

    $end            reduce using rule 1 (program -> instructions .)
    {               shift and go to state 13
    ID              shift and go to state 14
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    EYE             shift and go to state 23
    ONES            shift and go to state 24
    ZEROS           shift and go to state 25
    (               shift and go to state 15
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27
    STRING          shift and go to state 28

    instruction                    shift and go to state 29
    assign_instr                   shift and go to state 4
    if_instr                       shift and go to state 5
    while_instr                    shift and go to state 6
    for_instr                      shift and go to state 7
    break_instr                    shift and go to state 8
    continue_instr                 shift and go to state 9
    return_instr                   shift and go to state 10
    print_instr                    shift and go to state 11
    expression                     shift and go to state 12

state 3

    (3) instructions -> instruction .

    {               reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    EYE             reduce using rule 3 (instructions -> instruction .)
    ONES            reduce using rule 3 (instructions -> instruction .)
    ZEROS           reduce using rule 3 (instructions -> instruction .)
    (               reduce using rule 3 (instructions -> instruction .)
    INTNUM          reduce using rule 3 (instructions -> instruction .)
    FLOATNUM        reduce using rule 3 (instructions -> instruction .)
    STRING          reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> assign_instr .

    {               reduce using rule 4 (instruction -> assign_instr .)
    ID              reduce using rule 4 (instruction -> assign_instr .)
    IF              reduce using rule 4 (instruction -> assign_instr .)
    WHILE           reduce using rule 4 (instruction -> assign_instr .)
    FOR             reduce using rule 4 (instruction -> assign_instr .)
    BREAK           reduce using rule 4 (instruction -> assign_instr .)
    CONTINUE        reduce using rule 4 (instruction -> assign_instr .)
    RETURN          reduce using rule 4 (instruction -> assign_instr .)
    PRINT           reduce using rule 4 (instruction -> assign_instr .)
    EYE             reduce using rule 4 (instruction -> assign_instr .)
    ONES            reduce using rule 4 (instruction -> assign_instr .)
    ZEROS           reduce using rule 4 (instruction -> assign_instr .)
    (               reduce using rule 4 (instruction -> assign_instr .)
    INTNUM          reduce using rule 4 (instruction -> assign_instr .)
    FLOATNUM        reduce using rule 4 (instruction -> assign_instr .)
    STRING          reduce using rule 4 (instruction -> assign_instr .)
    $end            reduce using rule 4 (instruction -> assign_instr .)
    }               reduce using rule 4 (instruction -> assign_instr .)
    ELSE            reduce using rule 4 (instruction -> assign_instr .)


state 5

    (5) instruction -> if_instr .

    {               reduce using rule 5 (instruction -> if_instr .)
    ID              reduce using rule 5 (instruction -> if_instr .)
    IF              reduce using rule 5 (instruction -> if_instr .)
    WHILE           reduce using rule 5 (instruction -> if_instr .)
    FOR             reduce using rule 5 (instruction -> if_instr .)
    BREAK           reduce using rule 5 (instruction -> if_instr .)
    CONTINUE        reduce using rule 5 (instruction -> if_instr .)
    RETURN          reduce using rule 5 (instruction -> if_instr .)
    PRINT           reduce using rule 5 (instruction -> if_instr .)
    EYE             reduce using rule 5 (instruction -> if_instr .)
    ONES            reduce using rule 5 (instruction -> if_instr .)
    ZEROS           reduce using rule 5 (instruction -> if_instr .)
    (               reduce using rule 5 (instruction -> if_instr .)
    INTNUM          reduce using rule 5 (instruction -> if_instr .)
    FLOATNUM        reduce using rule 5 (instruction -> if_instr .)
    STRING          reduce using rule 5 (instruction -> if_instr .)
    $end            reduce using rule 5 (instruction -> if_instr .)
    }               reduce using rule 5 (instruction -> if_instr .)
    ELSE            reduce using rule 5 (instruction -> if_instr .)


state 6

    (6) instruction -> while_instr .

    {               reduce using rule 6 (instruction -> while_instr .)
    ID              reduce using rule 6 (instruction -> while_instr .)
    IF              reduce using rule 6 (instruction -> while_instr .)
    WHILE           reduce using rule 6 (instruction -> while_instr .)
    FOR             reduce using rule 6 (instruction -> while_instr .)
    BREAK           reduce using rule 6 (instruction -> while_instr .)
    CONTINUE        reduce using rule 6 (instruction -> while_instr .)
    RETURN          reduce using rule 6 (instruction -> while_instr .)
    PRINT           reduce using rule 6 (instruction -> while_instr .)
    EYE             reduce using rule 6 (instruction -> while_instr .)
    ONES            reduce using rule 6 (instruction -> while_instr .)
    ZEROS           reduce using rule 6 (instruction -> while_instr .)
    (               reduce using rule 6 (instruction -> while_instr .)
    INTNUM          reduce using rule 6 (instruction -> while_instr .)
    FLOATNUM        reduce using rule 6 (instruction -> while_instr .)
    STRING          reduce using rule 6 (instruction -> while_instr .)
    $end            reduce using rule 6 (instruction -> while_instr .)
    }               reduce using rule 6 (instruction -> while_instr .)
    ELSE            reduce using rule 6 (instruction -> while_instr .)


state 7

    (7) instruction -> for_instr .

    {               reduce using rule 7 (instruction -> for_instr .)
    ID              reduce using rule 7 (instruction -> for_instr .)
    IF              reduce using rule 7 (instruction -> for_instr .)
    WHILE           reduce using rule 7 (instruction -> for_instr .)
    FOR             reduce using rule 7 (instruction -> for_instr .)
    BREAK           reduce using rule 7 (instruction -> for_instr .)
    CONTINUE        reduce using rule 7 (instruction -> for_instr .)
    RETURN          reduce using rule 7 (instruction -> for_instr .)
    PRINT           reduce using rule 7 (instruction -> for_instr .)
    EYE             reduce using rule 7 (instruction -> for_instr .)
    ONES            reduce using rule 7 (instruction -> for_instr .)
    ZEROS           reduce using rule 7 (instruction -> for_instr .)
    (               reduce using rule 7 (instruction -> for_instr .)
    INTNUM          reduce using rule 7 (instruction -> for_instr .)
    FLOATNUM        reduce using rule 7 (instruction -> for_instr .)
    STRING          reduce using rule 7 (instruction -> for_instr .)
    $end            reduce using rule 7 (instruction -> for_instr .)
    }               reduce using rule 7 (instruction -> for_instr .)
    ELSE            reduce using rule 7 (instruction -> for_instr .)


state 8

    (8) instruction -> break_instr .

    {               reduce using rule 8 (instruction -> break_instr .)
    ID              reduce using rule 8 (instruction -> break_instr .)
    IF              reduce using rule 8 (instruction -> break_instr .)
    WHILE           reduce using rule 8 (instruction -> break_instr .)
    FOR             reduce using rule 8 (instruction -> break_instr .)
    BREAK           reduce using rule 8 (instruction -> break_instr .)
    CONTINUE        reduce using rule 8 (instruction -> break_instr .)
    RETURN          reduce using rule 8 (instruction -> break_instr .)
    PRINT           reduce using rule 8 (instruction -> break_instr .)
    EYE             reduce using rule 8 (instruction -> break_instr .)
    ONES            reduce using rule 8 (instruction -> break_instr .)
    ZEROS           reduce using rule 8 (instruction -> break_instr .)
    (               reduce using rule 8 (instruction -> break_instr .)
    INTNUM          reduce using rule 8 (instruction -> break_instr .)
    FLOATNUM        reduce using rule 8 (instruction -> break_instr .)
    STRING          reduce using rule 8 (instruction -> break_instr .)
    $end            reduce using rule 8 (instruction -> break_instr .)
    }               reduce using rule 8 (instruction -> break_instr .)
    ELSE            reduce using rule 8 (instruction -> break_instr .)


state 9

    (9) instruction -> continue_instr .

    {               reduce using rule 9 (instruction -> continue_instr .)
    ID              reduce using rule 9 (instruction -> continue_instr .)
    IF              reduce using rule 9 (instruction -> continue_instr .)
    WHILE           reduce using rule 9 (instruction -> continue_instr .)
    FOR             reduce using rule 9 (instruction -> continue_instr .)
    BREAK           reduce using rule 9 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 9 (instruction -> continue_instr .)
    RETURN          reduce using rule 9 (instruction -> continue_instr .)
    PRINT           reduce using rule 9 (instruction -> continue_instr .)
    EYE             reduce using rule 9 (instruction -> continue_instr .)
    ONES            reduce using rule 9 (instruction -> continue_instr .)
    ZEROS           reduce using rule 9 (instruction -> continue_instr .)
    (               reduce using rule 9 (instruction -> continue_instr .)
    INTNUM          reduce using rule 9 (instruction -> continue_instr .)
    FLOATNUM        reduce using rule 9 (instruction -> continue_instr .)
    STRING          reduce using rule 9 (instruction -> continue_instr .)
    $end            reduce using rule 9 (instruction -> continue_instr .)
    }               reduce using rule 9 (instruction -> continue_instr .)
    ELSE            reduce using rule 9 (instruction -> continue_instr .)


state 10

    (10) instruction -> return_instr .

    {               reduce using rule 10 (instruction -> return_instr .)
    ID              reduce using rule 10 (instruction -> return_instr .)
    IF              reduce using rule 10 (instruction -> return_instr .)
    WHILE           reduce using rule 10 (instruction -> return_instr .)
    FOR             reduce using rule 10 (instruction -> return_instr .)
    BREAK           reduce using rule 10 (instruction -> return_instr .)
    CONTINUE        reduce using rule 10 (instruction -> return_instr .)
    RETURN          reduce using rule 10 (instruction -> return_instr .)
    PRINT           reduce using rule 10 (instruction -> return_instr .)
    EYE             reduce using rule 10 (instruction -> return_instr .)
    ONES            reduce using rule 10 (instruction -> return_instr .)
    ZEROS           reduce using rule 10 (instruction -> return_instr .)
    (               reduce using rule 10 (instruction -> return_instr .)
    INTNUM          reduce using rule 10 (instruction -> return_instr .)
    FLOATNUM        reduce using rule 10 (instruction -> return_instr .)
    STRING          reduce using rule 10 (instruction -> return_instr .)
    $end            reduce using rule 10 (instruction -> return_instr .)
    }               reduce using rule 10 (instruction -> return_instr .)
    ELSE            reduce using rule 10 (instruction -> return_instr .)


state 11

    (11) instruction -> print_instr .

    {               reduce using rule 11 (instruction -> print_instr .)
    ID              reduce using rule 11 (instruction -> print_instr .)
    IF              reduce using rule 11 (instruction -> print_instr .)
    WHILE           reduce using rule 11 (instruction -> print_instr .)
    FOR             reduce using rule 11 (instruction -> print_instr .)
    BREAK           reduce using rule 11 (instruction -> print_instr .)
    CONTINUE        reduce using rule 11 (instruction -> print_instr .)
    RETURN          reduce using rule 11 (instruction -> print_instr .)
    PRINT           reduce using rule 11 (instruction -> print_instr .)
    EYE             reduce using rule 11 (instruction -> print_instr .)
    ONES            reduce using rule 11 (instruction -> print_instr .)
    ZEROS           reduce using rule 11 (instruction -> print_instr .)
    (               reduce using rule 11 (instruction -> print_instr .)
    INTNUM          reduce using rule 11 (instruction -> print_instr .)
    FLOATNUM        reduce using rule 11 (instruction -> print_instr .)
    STRING          reduce using rule 11 (instruction -> print_instr .)
    $end            reduce using rule 11 (instruction -> print_instr .)
    }               reduce using rule 11 (instruction -> print_instr .)
    ELSE            reduce using rule 11 (instruction -> print_instr .)


state 12

    (12) instruction -> expression .
    (46) expression -> expression . LESSER_THAN expression
    (47) expression -> expression . GREATER_THAN expression
    (48) expression -> expression . LESSER_EQUAL expression
    (49) expression -> expression . GREATER_EQUAL expression
    (50) expression -> expression . NOT_EQUAL expression
    (51) expression -> expression . EQUAL expression
    (52) expression -> expression . + expression
    (53) expression -> expression . - expression
    (54) expression -> expression . * expression
    (55) expression -> expression . / expression
    (56) expression -> expression . DOTADD expression
    (57) expression -> expression . DOTSUB expression
    (58) expression -> expression . DOTMUL expression
    (59) expression -> expression . DOTDIV expression
    (60) expression -> expression . '

    {               reduce using rule 12 (instruction -> expression .)
    ID              reduce using rule 12 (instruction -> expression .)
    IF              reduce using rule 12 (instruction -> expression .)
    WHILE           reduce using rule 12 (instruction -> expression .)
    FOR             reduce using rule 12 (instruction -> expression .)
    BREAK           reduce using rule 12 (instruction -> expression .)
    CONTINUE        reduce using rule 12 (instruction -> expression .)
    RETURN          reduce using rule 12 (instruction -> expression .)
    PRINT           reduce using rule 12 (instruction -> expression .)
    EYE             reduce using rule 12 (instruction -> expression .)
    ONES            reduce using rule 12 (instruction -> expression .)
    ZEROS           reduce using rule 12 (instruction -> expression .)
    (               reduce using rule 12 (instruction -> expression .)
    INTNUM          reduce using rule 12 (instruction -> expression .)
    FLOATNUM        reduce using rule 12 (instruction -> expression .)
    STRING          reduce using rule 12 (instruction -> expression .)
    $end            reduce using rule 12 (instruction -> expression .)
    }               reduce using rule 12 (instruction -> expression .)
    ELSE            reduce using rule 12 (instruction -> expression .)
    LESSER_THAN     shift and go to state 30
    GREATER_THAN    shift and go to state 31
    LESSER_EQUAL    shift and go to state 32
    GREATER_EQUAL   shift and go to state 33
    NOT_EQUAL       shift and go to state 34
    EQUAL           shift and go to state 35
    +               shift and go to state 36
    -               shift and go to state 37
    *               shift and go to state 38
    /               shift and go to state 39
    DOTADD          shift and go to state 40
    DOTSUB          shift and go to state 41
    DOTMUL          shift and go to state 42
    DOTDIV          shift and go to state 43
    '               shift and go to state 44


state 13
